[gd_scene load_steps=12 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://Shark.tscn" type="PackedScene" id=2]
[ext_resource path="res://Background.tscn" type="PackedScene" id=3]
[ext_resource path="res://GameFish.tscn" type="PackedScene" id=4]
[ext_resource path="res://art/fonts/slkscre.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://QuitMenu.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 24
font_data = ExtResource( 5 )

[node name="Game" type="Node"]
script = ExtResource( 1 )
Shark = ExtResource( 2 )

[node name="Background" parent="." instance=ExtResource( 3 )]

[node name="GameFish" parent="." instance=ExtResource( 4 )]

[node name="FishStartingPosition" type="Position2D" parent="."]
position = Vector2( 100, 250 )

[node name="DodgeEnemiesLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -203.0
margin_top = 100.0
margin_right = 203.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 1 )
text = "Dodge the enemies!"
align = 1

[node name="CountdownLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -133.0
margin_top = -15.5
margin_right = 133.0
margin_bottom = 15.5
custom_fonts/font = SubResource( 2 )
align = 1

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -500.0
margin_top = 10.0
margin_right = -10.0
custom_fonts/font = SubResource( 3 )
text = "Score: 0"
align = 2

[node name="HighScoreLabel" type="Label" parent="."]
margin_left = 10.0
margin_top = 8.052
margin_right = 500.0
margin_bottom = 33.052
custom_fonts/font = SubResource( 3 )
text = "Hiscore: 0"

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.0
margin_top = 40.0
margin_right = 55.0
margin_bottom = 15.5
custom_fonts/font = SubResource( 4 )
text = "Start"

[node name="BackButton" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -41.0
margin_right = 93.0
margin_bottom = -10.0
custom_fonts/font = SubResource( 5 )
text = "Back"

[node name="CountdownTimer" type="Timer" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]

[node name="QuitMenu" parent="." instance=ExtResource( 6 )]
[connection signal="hit" from="GameFish" to="." method="_on_GameFish_hit"]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="timeout" from="CountdownTimer" to="." method="_on_CountdownTimer_timeout"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="pressed" from="QuitMenu/YesButton" to="." method="_on_YesButton_pressed"]
[connection signal="pressed" from="QuitMenu/NoButton" to="." method="_on_NoButton_pressed"]

[editable path="QuitMenu"]
